Started Implementing interface for ItemStack